хайп глов на чат и чтот еще и фикс аррай листа то что он пропадает изза блюра и доделал рендер утилку и честстилер кокашко и скафф больше настроек